objects/Policy_Account_Role__c/Policy_Account_Role__c.object-meta.xml
<CustomObject>
    <label>Policy Account Role</label>
    <nameField>
        <displayFormat>PAR-{0000}</displayFormat>
        <label>Policy Account Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Account Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>