objects/Policy_Account_Role__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <referenceTo>Policy_Reference__c</referenceTo>
    <relationshipLabel>Policy Account Roles (Policy)</relationshipLabel>
    <relationshipName>Policy_Account_Roles1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>