objects/Policy_Account_Role__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <formula>HYPERLINK("/"&amp;Policy__c, Policy__r.Policy_Number__c)</formula>
    <label>Policy Number</label>
    <type>Text</type>
</CustomField>